Improve page image + annotation view; avoid overlap, usable on mobile
Towards #226 #225

--- a/sitemedia/scss/base/page/image-gallery-view.scss
+++ b/sitemedia/scss/base/page/image-gallery-view.scss
@@ -131,6 +131,10 @@
     flex-direction: row;
   }
 
+  @media (max-width: $medium-breakpoint) {
+      display: block;
+  }
+
   &.is-background-darken {
     background-color: $grey-800;
   }
@@ -262,6 +266,11 @@ $component-padding: 4rem;
   position: relative;
   padding: $component-padding $gutter-size 0 0;
 
+  @media (max-width: $medium-breakpoint) {
+    display: block;
+  }
+
+
   .is-background-darken & {
     padding-top: 0;
     padding-right: 0;
@@ -283,6 +292,7 @@ $component-padding: 4rem;
 
     &.is-hidden {
       // width: $deep-zoom-width;
+      display: none;
     }
 
     #deep-zoom {
@@ -356,7 +366,16 @@ $component-padding: 4rem;
 .gallery-image-view__img {
   display: inline-block;
   max-height: $max-component-height;
-  max-width: $deep-zoom-width;
+  // max-width: $deep-zoom-width;
+  // shrink with the window and leave space for the annotation cards
+  max-width: calc(100vh - 375px);
+
+  @media (max-width: $medium-breakpoint) {
+      max-width: unset;
+      max-height: unset;
+      width: 100%;
+  }
+
 }
 
 .gallery-image-view__footer {
@@ -368,6 +387,10 @@ $component-padding: 4rem;
   flex-direction: row-reverse;
   padding: 1em 4%;
   z-index: 1;
+
+  @media (max-width: $medium-breakpoint) {
+    right: 10%;
+  }
 
   .is-background-darken & {
     background: linear-gradient(to right, $white 0%, $white 300px, $base-background-color 300px, $base-background-color 100%);
@@ -404,12 +427,20 @@ $component-padding: 4rem;
 .collection.annotation-cards {
   // $offset: 40px;
   // width: calc(40% + #{$offset});
-  flex: 1;
+  align-self: flex-start;
+  flex: 20%;
   flex-direction: column;
   flex-wrap: nowrap;
+  min-width: 350px;
   max-height: calc(100vh - 260px); // shorter than max-component-height to allow space for rights info @bottom right
   overflow: scroll;
   position: relative;
+
+  @media (max-width: $medium-breakpoint) {
+    display: block;
+    width: 95%;
+    padding: 50px 0 100px 20px;
+  }
 
   .collection__item {
     left: 30px;
@@ -479,7 +510,7 @@ $component-padding: 4rem;
 
     &,
     .item__body {
-      width: 100%;
+      width: 85%;
       margin-left: 0;
       margin-bottom: 0;
     }
@@ -529,14 +560,23 @@ $component-padding: 4rem;
 
 .annotation-selections {
   height: $max-component-height;
-  display: block;
-  position: absolute;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   margin: 0 0 0 5%;
 
+  @media (max-width: $medium-breakpoint) {
+    display: block;
+    height: auto;
+  }
+
   .image-container {
+    align-self: center;
     display: inline-block;
     position: relative;
+    @media (max-width: $medium-breakpoint) {
+      width: 90%;
+    }
   }
 
   .zone {
